@@ -2,6 +2,8 @@ sones GraphDB 1.2 (developer) Changelog:
 
 20.07.2010
 - Changed result of PATH algorithm to containing NOT the starting element!
+- fixed sonesCLI to display RAM usage and used CPU time on mono
+- commented OnItemRemoved out because of mono trunk incompatiblity
 
 19.07.2010
 - Fixed Bug: Empty type information in path result
